<resources>
    <string name="app_name">sepehrseir</string>
    <string name="app_namePR">سپهرسیر</string>
    <string name="app_nameBrand"> سپهرسیر</string>
    <string name="number_picker_formatter">%02d</string>
    <string name="dearPassenger">مسافر محترم</string>
    <string name="comingsoonHotel"> برای رزرو هتل از دکمه زیر میتوانید اقدام کنید</string>
    <string name="hasUpdate">نسخه جدید نرم افزار در دسترس میباشد ،آیا میخواهید بروزرسانی کنید؟</string>
    <string name="menuHomePage">صفحه اصلی</string>
    <string name="menuTrackOrder">پیگیری خرید</string>
    <string name="menuLogin">ورود کاربران</string>
    <string name="menuLogout">خروج</string>
    <string name="menuLogoutUsers">خروج از حساب کاربری</string>
    <string name="menuSettingUser">تنظیمات کاربر</string>
    <string name="sendRequest">استرداد بلیط(به زودی)</string>
    <string name="pastPurchases">خریدهای گذشته</string>
    <string name="pastPurchases2">تاریخچه خرید</string>
    <string name="pastPurchasesAndRefund"> خریدهای گذشته و استرداد</string>
    <string name="menuRegister">ثبت نام</string>
    <string name="menuBlog">وبلاگ</string>
    <string name="menuAboutUs">درباره ما</string>
    <string name="menuContactUs"> پشتیبانی آنلاین</string>
    <string name="room">اتاق</string>
    <string name="bedExtra">تخت اضافه</string>
    <string name="noBedExtra">بدون تخت اضافه</string>
    <string name="flightDuration">مدت پرواز</string>
    <string name="flightStops">زمان توقف</string>
    <string name="or">یا</string>
    <string name="busyPlace">مسیرهای پرتردد</string>
    <string name="busyPlaceHotel">هتل های پر تردد</string>
    <string name="allPlace">همه ی مسیرها</string>
    <string name="airPlan">هواپیما</string>
    <string name="train">قطار</string>
    <string name="couNationality">تابعیت</string>
    <string name="typePassenger">مسافر</string>
    <string name="typeAirPlane">نوع هواپیما</string>
    <string name="typeTicketTrain">نوع بلیط</string>
    <string name="typeFlight">نوع پرواز</string>
    <string name="passenger">مسافر</string>
    <string name="addPassenger">افزودن مسافر </string>
    <string name="addCountPassenger">تعداد مسافر </string>
    <string name="exportingCountry">کشور صادر کننده</string>
    <string name="exportingCountryDomestic">ملیت(کشور)</string>
    <string name="bus_vip">وی آی پی</string>
    <string name="bus_normal">معمولی</string>
    <string name="bus">اتوبوس</string>
    <string name="hotel">هتل</string>
    <string name="domesticHotel">هتل داخلی</string>
    <string name="internationalHotel">هتل خارجی</string>
    <string name="tour">تور</string>
    <string name="cityAndAirport">شهر/فرودگاه</string>
    <string name="country">کشور</string>
    <string name="pleaseFromPlace">شهر مبدا را انتخاب کنید</string>
    <string name="pleaseToPlace">شهر مقصد را انتخاب کنید</string>
    <string name="airPort">فرودگاه</string>
    <string name="reservering">در حال رزرو پرواز</string>
    <string name="reserve">رزرو</string>
    <string name="bookingOnline">رزرو آنلاین</string>
    <string name="preBooking">در حال پیش رزرو</string>
    <string name="bookingOffline">رزرو تلفنی</string>
    <string name="registeringInfo">در حال بررسی اطلاعات</string>
    <string name="openingGate">در حال انتقال به درگاه بانکی</string>
    <string name="gettingInfo">درحال دریافت اطلاعات</string>
    <string name="refunding">در حال استرداد بلیط</string>
    <string name="gettingInfoRefund">در حال بررسی استرداد</string>
    <string name="pricePerPerson">قیمت هر نفر</string>
    <string name="pricePerPersonSingle">قیمت تک نفر (single)</string>
    <string name="loginPanel">ورود به پنل کاربری</string>
    <string name="person">نفر</string>
    <string name="visa">ویزا</string>
    <string name="leaderTranslate">لیدر فارسی زبان</string>
    <string name="insurance">بیمه</string>
    <string name="simCard">سیم کارت</string>
    <string name="welcomeHoney">استقبال و بدرقه</string>
    <string name="crossCityTransfer">ترنسفر بین شهری</string>
    <string name="airPlanInternational">پرواز خارجی</string>
    <string name="airPlanDomestic">پرواز داخلی</string>
    <string name="cheapest">ارزان ترین</string>
    <string name="flight">پرواز</string>
    <string name="airplane">هواپیما</string>
    <string name="domesticTour">داخلی</string>
    <string name="InternationalTour">خارجی</string>
    <string name="dayTour">یک روزه</string>
    <string name="allTour">همه</string>
    <string name="day">روز</string>
    <string name="night">شب</string>
    <string name="update">بروزرسانی</string>
    <string name="mobile">موبایل</string>
    <string name="descIfNeed">توضیحات(اختیاری)</string>
    <string name="mobileOrEmail">موبایل یا ایمیل را وارد کنید</string>
    <string name="password">رمز عبور</string>
    <string name="signInUsers">(ورودکاربران)</string>
    <string name="guestUser">کاربر مهمان</string>
    <string name="signIn">ورود</string>
    <string name="sendPassword">ارسال رمز جدید</string>
    <string name="signInComment">Please Enter Yout Phone Number</string>
    <string name="forgetPassword">دریافت رمز عبور جدید؟</string>
    <string name="dontGetCodePassword">عدم دریافت رمز </string>
    <string name="samplePhone">+98 0939-857-6607</string>
    <string name="editPhoneNumber">Edit Phone Number</string>
    <string name="nationalCode">کد ملی</string>
    <string name="fName">نام(انگلیسی)</string>
    <string name="lName">نام خانوادگی(انگلیسی)</string>
    <string name="fNameFarsi">نام</string>
    <string name="lNameFarsi">نام خانوادگی</string>
    <string name="birthDayPersian">تاریخ تولد</string>
    <string name="gender">جنسیت</string>
    <string name="passportDate">تاریخ انقضا پاسپورت</string>
    <string name="dateOfIssueOfThePassport">تاریخ صدور پاسپورت</string>
    <string name="noPassport">شماره پاسپورت</string>
    <string name="mobilePhone">تلفن همراه</string>
    <string name="telephone">تلفن ثابت(کداستان)</string>
    <string name="email">پست الکترونیک</string>
    <string name="secCode">کد امنیتی</string>
    <string name="edit">ویرایش</string>
    <string name="registerFlightPassenger">اطلاعات پرواز و مسافر</string>
    <string name="userAccount">حساب کاربری</string>
    <string name="user">ورود کاربر</string>
    <string name="financialSection">بخش مالی</string>
    <string name="giftCard">موجودی</string>
    <string name="getGiftCard">دریافت موجودی</string>
    <string name="chargeGiftCard">شارژ موجودی</string>
    <string name="sentRate">ارسال نظر</string>
    <string name="editProfile">ویرایش مشخصات (به زودی)</string>
    <string name="saveEdition">ذخیره تغییرات</string>
    <string name="credit">اعتبار</string>
    <string name="fullName">نام و نام خانوادگی</string>
    <string name="nameOfAccountHolder">نام صاحب حساب</string>
    <string name="numberSheba">شماره شبا</string>
    <string name="sortBy">مرتب سازی لیست بر اساس ؟</string>
    <string name="sortByTimeTitleSoonMorning">بامداد</string>
    <string name="sortByTimeTitleMorning">صبح</string>
    <string name="sortByTimeTitleNoon">ظهر</string>
    <string name="sortByTimeTitleAfternoon">بعدازظهر</string>
    <string name="sortByTimeTitleEvening">شب</string>
    <string name="sortByTimeValueSoonMorning">00:00 تا 06:59</string>
    <string name="sortByTimeValueMorning">07:00 تا 10:59</string>
    <string name="sortByTimeValueNoon">11:00 تا 15:59</string>
    <string name="sortByTimeValueAfternoon">16:00 تا 19:59</string>
    <string name="sortByTimeValueEvening">20:00 تا 23:59</string>
    <string name="sortByPriceTitle">محدوده قیمت :</string>
    <string name="sort">مرتب سازی</string>
    <string name="sortAndFilter">مرتب سازی و فیلتر</string>
    <string name="airline">ایرلاین</string>
    <string name="trainType">نوع قطار</string>
    <string name="trainCompany">شرکت ریلی</string>
    <string name="busType">نوع اتوبوس</string>
    <string name="money">قیمت</string>
    <string name="stops">توقف</string>
    <string name="stopsTitle">تعداد توقف</string>
    <string name="time">زمان</string>
    <string name="domestic">داخلی</string>
    <string name="international">خارجی</string>
    <string name="fromPlace">مبدا</string>
    <string name="checkInDate">تاریخ ورود</string>
    <string name="checkOutDate">تاریخ خروج</string>
    <string name="fromEng">From</string>
    <string name="toEng">To</string>
    <string name="from">از </string>
    <string name="to">به </string>
    <string name="toPlace">مقصد</string>
    <string name="ok">تایید</string>
    <string name="acceptFilter">اعمال فیلتر</string>
    <string name="cancel">انصراف</string>
    <string name="exit">خروج</string>
    <string name="userExit"> خروج کاربر</string>
    <string name="refund">استرداد</string>
    <string name="checkRefund">بررسی استرداد</string>
    <string name="noRefund">غیرقابل استرداد</string>
    <string name="refundBySupport">برای استرداد با پشتیبانی تماس بگیرید </string>
    <string name="callSupport">لطفا با پشتیبانی تماس بگیرید</string>
    <string name="callToSupport">تماس با پشتیبانی</string>
    <string name="back">بازگشت</string>
    <string name="searchByFrom">جستجو براساس مبدا</string>
    <string name="searchByTo">جستجو براساس مقصد</string>
    <string name="oneWay">بلیط یک طرفه</string>
    <string name="twoWay">بلیط دو طرفه</string>
    <string name="wentAndReturn">رفت و برگشت</string>
    <string name="wentRouting">مسیر رفت</string>
    <string name="returnRouting">مسیر برگشت</string>
    <string name="multiWay">به چند شهر</string>
    <string name="fromDate">تاریخ رفت</string>
    <string name="toDate">تاریخ برگشت</string>
    <string name="moveDate">تاریخ حرکت</string>
    <string name="expireDatePassport">تاریخ انقضا پاسپورت</string>
    <string name="date">تاریخ برگشت</string>
    <string name="fromWentDateTime">ساعت و تاریخ حرکت(رفت)</string>
    <string name="fromWentTime">ساعت پرواز</string>
    <string name="fromReturnDateTime">ساعت و تاریخ حرکت(برگشت)</string>
    <string name="flyingFrom">مبدا را انتخاب کنید</string>
    <string name="flyingTo">مقصد را انتخاب کنید</string>
    <string name="samplePrice">156000 تومان</string>
    <string name="sampleWeek">شنبه</string>
    <string name="sampleMonth">25 مهر   - 1395</string>
    <string name="sampleClassFlight">اکونومی </string>
    <string name="searchTicket">جستجو بلیط</string>
    <string name="buyTicket">خرید بلیط</string>
    <string name="searchFlight">جستجو</string>
    <string name="classFlight">کلاس پروازی</string>
    <string name="went">رفت</string>
    <string name="return_">برگشت</string>
    <string name="adults">بزرگسال</string>
    <string name="children">کودک</string>
    <string name="contactInfo">اطلاعات تماس</string>
    <string name="rulesAndLaw">قوانین و مقررات</string>
    <string name="registerFlight">ثبت</string>
    <string name="nevermind">بیخیال</string>
    <string name="rulesInternetBuy">قبل از زدن دکمه ثبت قوانین رزرو اینترنتی را مطالعه نمودم و آن را قبول دارم.</string>
    <string name="city">شهر</string>
    <string name="acceptEng">Accept</string>
    <string name="neverMindEng">NeverMind</string>
    <string name="hotelInformationEng">Hotel Information</string>
    <string name="passengerInformationEng">Passenger Information</string>
    <string name="successGetTicketEng">Dear passenger, your ticket was successfully issued. Click on the button below to receive the ticket </string>
    <string name="getTicketEng">Get Ticket</string>
    <string name="exitEng">Exit</string>
    <string name="buyEng">Payment</string>
    <string name="editEng">Edit</string>
    <string name="titleRuleInternationalHotelEng">Dear passenger please pay attention to the following points</string>
    <string name="ruleInternationalHotel1Eng">Please check the information entered and make sure that it is correct for payment.</string>
    <string name="ruleInternationalHotel2Eng">please pay attention ,If you have entered the information below incorrectly or need to change it, you can use the Edit Information button.</string>
</resources>