<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp"
    android:layoutDirection="ltr"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="left"
        android:layout_margin="10dp"
        android:drawableLeft="@mipmap/ic_warning"
        android:drawablePadding="5dp"
        android:gravity="left|center"
        android:text="@string/titleRuleInternationalHotelEng"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
        android:textColor="@color/redMaster" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="left"
        android:layout_margin="15dp"
        android:gravity="left"
        android:text="@string/ruleInternationalHotel1Eng"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
        android:textColor="@android:color/black" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="left"
        android:layout_margin="15dp"
        android:gravity="left"
        android:text="@string/ruleInternationalHotel2Eng"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
        android:textColor="@android:color/black" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:layout_marginTop="5dp"
        android:gravity="right"
        android:orientation="horizontal">

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/btnAcceptRules"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/acceptEng"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
            android:textColor="@color/styleConfigMasterButtonTitle"
            app:backgroundTint="@color/styleConfigMasterButtonBackground" />

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/btnCancel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/neverMindEng"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
            android:textColor="@color/styleConfigMasterButton2Title"
            app:backgroundTint="@color/styleConfigMasterButton2Background" />


    </LinearLayout>
</LinearLayout>