<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/coordinator"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/styleConfigServiceBackground">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/layoutPrice"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:layout_margin="5dp"
            android:text="@string/hotelInformationEng"
            android:textColor="@android:color/black" />


        <include layout="@layout/include_service_hotel_international_details_layout" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/styleConfigLineSplitter" />


        <include layout="@layout/include_service_hotel_international_passenger_details_layout" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/styleConfigLineSplitter" />

        <TextView
            android:id="@+id/txtFinalPrice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="5dp"
            android:gravity="center"
            android:singleLine="true"
            android:text="Final payment:------"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
            android:textColor="@color/styleConfigServiceTitle" />

        <TextView
            android:id="@+id/titleFinalTicket"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/btnGetTicket"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:gravity="center"
            android:text="@string/successGetTicketEng"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
            android:textColor="@android:color/black"
            android:visibility="gone" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/styleConfigLineSplitter" />

        <TextView
            android:id="@+id/tvCountPassenger"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:text="@string/passengerInformationEng"
            android:textColor="@android:color/black" />


        <android.support.v7.widget.RecyclerView
            android:id="@+id/rvResult"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:numColumns="auto_fit"
            android:stretchMode="columnWidth"
            android:visibility="visible" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/layoutPrice"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/layoutButton"
        android:orientation="vertical">


    </LinearLayout>

    <LinearLayout
        android:id="@+id/layoutButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/layoutButtonPayment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:visibility="visible">


            <android.support.v7.widget.AppCompatButton
                android:id="@+id/btnBuy"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/buyEng"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
                android:textColor="@color/styleConfigMasterButtonTitle"
                app:backgroundTint="@color/styleConfigMasterButtonBackground" />

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/btnEditBuy"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/editEng"
                android:textColor="@color/styleConfigMasterButton2Title"
                app:backgroundTint="@color/styleConfigMasterButton2Background" />

        </LinearLayout>


        <LinearLayout
            android:id="@+id/layoutButtonGetTicket"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:orientation="horizontal"
            android:visibility="gone">


            <android.support.v7.widget.AppCompatButton
                android:id="@+id/btnGetTicket"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/getTicketEng"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
                android:textColor="@color/styleConfigMasterButtonTitle"
                app:backgroundTint="@color/styleConfigMasterButtonBackground" />

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/btnExit"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/exitEng"
                android:textColor="@color/styleConfigMasterButton2Title"
                app:backgroundTint="@color/styleConfigMasterButton2Background" />

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>


